fix btn on iphone

--- a/src/scss/blocks/_shop.scss
+++ b/src/scss/blocks/_shop.scss
@@ -15,6 +15,7 @@
 
     &-btn {
       border: none;
+      padding: 0;
       fill: white;
       display: flex;
       justify-content: center;
